--- a/package.json
+++ b/package.json
@@ -9,16 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/modal": "^2.0.0",
+    "@chakra-ui/react": "^2.0.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "framer-motion": "^6.3.3",
+    "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   }
 }
