--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
+    "react-textarea-autosize": "^8.3.4",
     "redux": "^4.2.0",
     "swr": "^1.3.0"
   },
