--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.10",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.24",
@@ -29,7 +30,8 @@
     "react-redux": "^8.0.1",
     "react-textarea-autosize": "^8.3.4",
     "redux": "^4.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
